# thesis

./: Cargo.toml  Dockerfile  LICENSE  Makefile  build.sh  dpdk-bindings.code-workspace  flake.nix  meson.build  vm.nix
.devcontainer/: devcontainer.json
dpdk/: Cargo.toml
dpdk-bindings/: Cargo.toml  Dockerfile
dpdk-hello-world/: Cargo.toml
dpdk-hello-world/src/: event_handlers.rs  main.rs  workers.rs
dpdk-hello-world/src/log/: client_log_manager.rs  mod.rs
dpdk-hello-world/src/workers/: mod.rs
dpdk-sys/: CMakeLists.txt  Cargo.toml  build.rs  symbols.def  symbols_regex.def  wrapper.h
dpdk-sys/dpdk-22.03/: meson_options.txt
dpdk-sys/dpdk-22.03/.cache/clangd/index/: 5tswap.c.FBEDEBDC9B0A2C82.idx  acc100_pf_enum.h.C476F4740FF3B341.idx  acc100_vf_enum.h.15E4B46558B1DAD6.idx  acl.h.1EF47AA8900DE25F.idx  acl_bld.c.7998F14AC34B0143.idx  acl_gen.c.59564E064B2A33D7.idx  acl_run.h.6D9FF67C01F58062.idx  acl_run_avx2.c.86023A69C9FB1554.idx  acl_run_avx2.h.0AA56C78A5DD75D5.idx  acl_run_avx512.c.92905AB54DBAE7E3.idx  acl_run_avx512_common.h.F56C57A1545BEAAD.idx  acl_run_avx512x16.h.3E8691E421886F74.idx  acl_run_avx512x8.h.ECA11A218187A1A9.idx  acl_run_scalar.c.01782B888D561F1D.idx  acl_run_sse.c.76AB5A80A9FDCD82.idx  acl_run_sse.h.4D59E422E84CD253.idx  acl_vect.h.CB885DF55383B839.idx  adapter.h.EBA3C1F9353A37B5.idx  adf_pf2vf_msg.h.DF9C8F1009B95E8C.idx  adf_transport_access_macros.h.E21498852A748256.idx  adf_transport_access_macros_gen4.h.C2B2885C9BAA29D7.idx  adf_transport_access_macros_gen4vf.h.6A449EF5373773BD.idx  af_xdp_deps.h.B80C4F5847E6D367.idx  algo.h.70D80FDCA3FD6718.idx  ark_ddm.c.16B4596BB01B7DD9.idx  ark_ddm.h.DB05512845F6048F.idx  ark_ethdev.c.DEC47C3334E7C4B2.idx  ark_ethdev_rx.c.EC881431473F82EE.idx  ark_ethdev_rx.h.02467F551AC2C84B.idx  ark_ethdev_tx.c.983A1FF200367408.idx  ark_ethdev_tx.h.425656D27A269D14.idx  ark_global.h.6210B4E88E0F8EE0.idx  ark_logs.h.99920FE7E4309783.idx  ark_mpu.c.F1C8402EE2307B25.idx  ark_mpu.h.ACADA2B9C4B16B1F.idx  ark_pktchkr.c.054BD8D14122F273.idx  ark_pktchkr.h.32BAFE4055193C60.idx  ark_pktdir.c.A86A2D006DC0359A.idx  ark_pktdir.h.465660B654714055.idx  ark_pktgen.c.88D0B1B04CC09D28.idx  (+3265 more)
dpdk-sys/dpdk-22.03/app/test/: test_cryptodev_security_ipsec.c
dpdk-sys/dpdk-22.03/lib/: meson.build
dpdk-sys/dpdk-22.03/lib/ethdev/: meson.build  rte_ethdev.h
dpdk-sys/dpdk-22.03/lib/net/: rte_ether.h
dpdk-sys/src/: bindings_meson.rs  impls.rs  lib.rs  replacements.rs
dpdk/src/: config.rs  eal.rs  lib.rs  ring.rs  util.rs
dpdk/src/device/: mod.rs
dpdk/src/device/eth/: dev.rs  mod.rs  rx.rs  tx.rs
dpdk/src/device/event/: dev.rs  event.rs  event_interface.rs  mod.rs
dpdk/src/device/event/eth/: mod.rs  rx.rs  tx.rs
dpdk/src/hash/: mod.rs
dpdk/src/ip_frag/: mod.rs
dpdk/src/memory/: allocator.rs  mbuf.rs  mempool.rs  mod.rs  pktmbuf_pool.rs
dpdk/src/ring/: dpdk_ring.rs  externs.rs  mod.rs  rusty_ring.rs
dpdk/src/rss/: mod.rs
subprojects/dpdk/: meson.build  meson_options.txt
subprojects/dpdk/app/: meson.build
subprojects/dpdk/lib/: meson.build
subprojects/dpdk/lib/eal/: meson.build
subprojects/dpdk/lib/eal/linux/: eal.c
subprojects/dpdk/lib/metrics/: rte_metrics_telemetry.h
subprojects/dpdk/lib/ring/: meson.build
subprojects/dpdk/lib/rust_bindgen/: binding_header.h  meson.build
thesis/: Cargo.toml  sizes.txt
thesis-bin/: Cargo.toml
thesis-bin/src/: bench.rs  main.rs
thesis/inputs/: a.pcap
thesis/src/: db.rs  lib.rs  log.rs  main.rs  prefix.rs  semaphore.rs  state.rs
thesis/src/log/: client_log_manager.rs  mod.rs  slab_list.rs
thesis/src/message/: ack.rs  client_message.rs  message_packet.rs  mod.rs
thesis/src/sync_provider/: local_sync_provider.rs  mod.rs
thesis/src/testing/bench/: channels.rs  mod.rs  state.rs
thesis/src/workers/: circular_buffer.rs  eth.rs  mod.rs  order_messages.rs  pipeline.rs
util/partitioned_swiss_table/: Cargo.toml
util/partitioned_swiss_table/src/: lib.rs  table.rs
util/slab-list/: Cargo.toml
util/slab-list/src/: lib.rs  slab_list.rs
util/tailq-iterator/: Cargo.toml
util/tailq-iterator/src/: lib.rs
vms/: Makefile  flake.nix  result
