[package]
edition = "2021"
name = "dpdk-hello-world"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dpdk = { path = "../dpdk" }

# C Interop helpers
libc = "0.2.124"

# Error handling
anyhow = "1.0.58"

# Compile-time assertions
static_assertions = "1.1.0"

# Better locking primitives
parking_lot = {version = "0.12.1", features = ["hardware-lock-elision"]}

# Packet serialization and deserialization
serde = {version = "1.0", features = ["derive"]}
bincode = "1.3"