[package]
name = "dpdk-sys"
version = "0.1.0"
edition = "2021"
links = "libdpdk"

[dependencies]
libc = "0.2.124"

[build-dependencies]
libc = { version = "0.2.124" }
pkg-config = "0.3.25"
bindgen = { version = "0.60.1" }
system-deps = "6.0.2"
cc = "1.0.73"

[package.metadata.system-deps]
libdpdk = "22"