[package]
name = "dpdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dpdk-sys = {path = "../dpdk-sys"}
libc = "0.2.125"
itertools = "0.10.3"
derive_builder = "0.11.2"
thiserror = "1.0.31"
tailq_iterator = {path = "../util/tailq-iterator"}
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
bitflags = "1.3.2"